# Planets

./: CMakeLists.txt  Planets.kdev4  main.cpp
inc/: basicui.h  board.h  cache.h  collection.h  datacache.h  engine.h  generator.h  global.h  minimaxoptimizer.h  result.h  sgen_interface.h  sstack.h  step.h  stone.h  str_node.h  view2d.h
info/: README.md
src/: basicui.cpp  board.cpp  cache.cpp  collection.cpp  datacache.cpp  engine.cpp  generator.cpp  minimaxoptimizer.cpp  result.cpp  sstack.cpp  step.cpp  stone.cpp  str_node.cpp  view2d.cpp
